--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
  </nav>
  <section class="heroIMG">
     <div class="Content">
-        <img src="Images/Warehouse_About.png">
+        <p>Warehouse Billiard Bar was first born as Warehouse Saloon & Billiards in 1984 and is still in the hands of the original owner, a rarity in Austin these days. In 2015, we began to envision a new Warehouse: a lush billiard hall, a multi-faceted entertainment facility, and a just plain-old sitting back joint. 
+
+            We spent the first half of 2016 remodeling, renovating and re-branding. At 11,000 square feet, Warehouse Billiard Bar has plenty of what’s hard to find in Austin these days: parking, air conditioning, and elbow room. 
+            
+            Come on in and work on your inner pool shark, play some Poker or Incredible 3D golf, or just chill out.</p>
     </div>
  </section>
 </header>
